<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="empty"></string>
    <string name="stats">Starting</string>
    <string name="app_name">WiGLE WiFi Wardriving</string>
    <string name="list_app_name">WiGLE WiFi</string>
    <string name="settings_app_name">WiGLE WiFi – Settings</string>
    <string name="mapping_app_name">WiGLE – Map</string>
    <string name="dashboard_app_name">WiGLE WiFi – Dashboard</string>
    <string name="error_report_name">Most Recent Error Report</string>
    <string name="speech_name">WiGLE WiFi – Speech Settings</string>
    <string name="network_activity_name">WiGLE WiFi – Network</string>
    <string name="data_activity_name">WiGLE WiFi – Database</string>
    <string name="dbresult_activity_name">WiGLE WiFi – Search Result</string>
    <string name="upload_button">Upload to\nWiGLE.net</string>
    <string name="shadowcheck_button">Upload to\nShadowCheck</string>
    <string name="username">WiGLE username</string>
    <string name="password">WiGLE password</string>
    <string name="show_current">Show current networks only</string>
    <string name="use_metric">Use metric units</string>
    <string name="be_anonymous">Upload anonymously</string>
    <string name="donate">Donate data: Allow commercial use</string>
    <string name="found_sound">Play sound when network found in run</string>
    <string name="found_new_sound">Play sound when new network in DB</string>
    <string name="reset_maxid_button">Zero DB marker</string>
    <string name="reset_maxid_text">Latest upload marker:</string>
    <string name="maxout_maxid_button">Maxout DB marker</string>
    <string name="maxout_maxid_text">Set marker to:</string>
    <string name="csv_run_export_button">CSV Export Run</string>
    <string name="csv_run_export_text">Export current run to CSV file</string>
    <string name="csv_export_button">CSV Export DB</string>
    <string name="csv_export_text">Export entire DB to CSV file</string>
    <string name="kml_run_export_button">KML Export Run</string>
    <string name="kml_run_export_text">Export current run to KML file</string>
    <string name="kml_export_button">KML Export DB</string>
    <string name="kml_export_text">Export entire DB to KML file</string>
    <string name="backup_db_button">Backup Database</string>
    <string name="backup_db_text">Make a database backup</string>
    <string name="backup_preparing">Preparing to back up database&#8230;</string>
    <string name="backup_in_progress">Backing up database&#8230;</string>
    <string name="import_observed_button">Import Observed</string>
    <string name="import_observed_text">Import my observed networks from WiGLE</string>
    <string name="periodstill_text">Time between WiFi scans standing still</string>
    <string name="period_text">Time between WiFi scans when slower than 8 km/h or 5 mph</string>
    <string name="periodfast_text">Time between WiFi scans when faster than 8 km/h or 5 mph</string>
    <string name="gps_text">Time between GPS updates</string>
    <string name="speak_text">Time between audio speech</string>
    <string name="battery_kill_text">Exit at this battery level</string>
    <string name="reset_wifi_text">Decide WiFi is jammed</string>
    <string name="speech_gps">GPS status changes</string>
    <string name="mute">Mute Audio</string>
    <string name="play">Play Audio</string>
    <string name="sort_text">Sort Options</string>
    <string name="listdialog_button">OK</string>
    <string name="cryptodialog_button">OK</string>
    <string name="cryptocanceldialog_button">Cancel</string>
    <string name="circle_size_map">Map circles sized by qty</string>
    <string name="speech_button">Speech Configuration Screen &gt;&gt;</string>
    <string name="speech_text">Audio speech will include:</string>
    <string name="speech_run">Nets for run</string>
    <string name="speech_new_wifi">New WiFi to DB</string>
    <string name="speech_new_cell">New cell towers to DB</string>
    <string name="speech_queue">Queue size if &gt; 0</string>
    <string name="speech_miles">Miles in run</string>
    <string name="speech_time">Current time</string>
    <string name="speech_battery">Battery level percentage</string>
    <string name="speech_ssid">New Network SSID\'s</string>
    <string name="query_address">Address (ex: Chicago, US):</string>
    <string name="query_ssid">SSID (ex: Linksys) (SQL wildcards: %,_):</string>
    <string name="query_bssid">BSSID (ex: 0A:2C:EF:3D:25:1B) (SQL wildcards: %,_):</string>
    <string name="search_button">Query Local DB</string>
    <string name="reset_button">Reset Fields</string>
    <string name="crypto_security">Security</string>
    <string name="crypto_strength">Signal strength</string>
    <string name="crypto_password">Password</string>
    <string name="crypto_show_password">Show password.</string>
    <string name="filter_show_ssid">Show SSIDs Matching (regex):</string>
    <string name="filter_not_regex">Show what doesn\'t match above regular expression</string>
    <string name="filter_show_open">Show Open</string>
    <string name="filter_show_cell">Show Cell</string>
    <string name="filter_show_wep">Show WEP</string>
    <string name="filter_show_wpa">Show WPA</string>
    <string name="filter_enabled">Filter Enabled</string>
    <string name="list_waiting_gps">(Waiting for GPS sync&#8230;)</string>
    <string name="list_scanning_off">(Scanning turned off)</string>
    <string name="list_short_lat">Lat: %1$s</string>
    <string name="list_short_lon">Lon: %1$s</string>
    <string name="list_short_sats">Sats: %1$d</string>
    <string name="list_short_alt">Alt: %1$s</string>
    <string name="list_status_default">(status)</string>
    <string name="list_speed">Speed: %1$s</string>
    <string name="list_upload">Upload File?</string>
    <string name="network_signal">Signal:</string>
    <string name="network_type">Type:</string>
    <string name="network_firstseen">First Seen:</string>
    <string name="network_capa">Capabilities:</string>
    <string name="network_channel">Channel:</string>
    <string name="network_observations">Observations:</string>
    <string name="network_querying">(querying&#8230;)</string>
    <string name="network_rcois">RCOIs:</string>
    <string name="setting_show_password">Show Password</string>
    <string name="setting_db_marker">DB Marker (where uploads start from):</string>
    <string name="setting_high_up">Highest uploaded id:</string>
    <string name="setting_zero_out">Zero out DB marker?</string>
    <string name="setting_max_id">Max upload id:</string>
    <string name="setting_max_start">Max id at startup:</string>
    <string name="setting_max_out">Max out DB marker?</string>
    <string name="setting_tie_wifi">Sync with WiFi</string>
    <string name="no_tts">No Text-to-Speech engine</string>
    <string name="sec">sec</string>
    <string name="min">min</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="nonstop">Nonstop</string>
    <string name="tab_list">Network List</string>
    <string name="tab_map">Map</string>
    <string name="tab_dash">Dashboard</string>
    <string name="tab_data">Database</string>
    <string name="tab_stats">Statistics</string>
    <string name="tab_search">Search</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dash_scan_off">(Scanning Turned Off)</string>
    <string name="dash_new_wifi">New WiFi</string>
    <string name="dash_vis_nets">Visible Nets: %1$d</string>
    <string name="dash_new_upload">Nets Since Upload: %1$d</string>
    <string name="dash_new_cells">New Cell</string>
    <string name="dash_new_bt">New Bluetooth</string>
    <string name="dash_dist_run">Run Distance:</string>
    <string name="dash_time_run">Run Duration:</string>
    <string name="dash_time_scanning">Scan Duration:</string>
    <string name="dash_dist_total">Total Dist.:</string>
    <string name="dash_dist_prev">Previous Run:</string>
    <string name="dash_db_queue">DB Queue: %1$s</string>
    <string name="dash_db_nets">DB Nets: %1$s</string>
    <string name="dash_db_locs">DB Locations: %1$s</string>
    <string name="dash_short_loc">Loc: %1$s</string>
    <string name="Mm_short">Mm</string>
    <string name="km_short">km</string>
    <string name="mi_short">mi</string>
    <string name="miles">miles</string>
    <string name="m_short">m</string>
    <string name="meters">meters</string>
    <string name="ft_short">ft</string>
    <string name="feet">feet</string>
    <string name="kmph">km/h</string>
    <string name="mph">mph</string>
    <string name="ms_short">ms</string>
    <string name="na">N/A</string>
    <string name="run">Run</string>
    <string name="new_word">New</string>
    <string name="db">DB</string>
    <string name="scanned_in">%1$d scanned in %2$d%3$s.</string>
    <string name="sort_title">Sort Options</string>
    <string name="sort_spin_label">Sort List By:</string>
    <string name="channel">Channel</string>
    <string name="crypto">Crypto</string>
    <string name="found_time">Found Time</string>
    <string name="signal">Signal</string>
    <string name="ssid">SSID</string>
    <string name="bssid">BSSID</string>
    <string name="best_results">For best results, unset "Network notification" in "Wireless &amp; networks"-&gt;"WiFi settings"</string>
    <string name="turn_on_wifi">Please turn on WiFi</string>
    <string name="no_gps_device">No GPS detected in device!</string>
    <string name="turn_on_gps">Please turn on GPS</string>
    <string name="address">Address</string>
    <string name="no_address_found">No geocoded address found</string>
    <string name="problem_with_field">Problem with field</string>
    <string name="lost_location">Lost Location</string>
    <string name="have_location">Now have location from</string>
    <string name="wifi_jammed">WiFi appears jammed, turning off, and then on, WiFi.</string>
    <string name="battery_at">Battery level at</string>
    <string name="battery_postfix">percent, shutting down WiGLE WiFi</string>
    <string name="scan">Scan</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_error_report">Send Error Report</string>
    <string name="menu_return">Return</string>
    <string name="menu_sort">Sort Options</string>
    <string name="menu_ssid_filter">SSID Label Filter</string>
    <string name="menu_screen_sleep">Let Screen Sleep</string>
    <string name="menu_screen_wake">Keep Screen On</string>
    <string name="menu_labels_off">Labels Off</string>
    <string name="menu_labels_on">Labels On</string>
    <string name="menu_turn_off_lockon">Turn Off Lockon</string>
    <string name="menu_turn_on_lockon">Turn On Lockon</string>
    <string name="menu_show_old">Show Run&amp;New</string>
    <string name="menu_show_new">Show New Only</string>
    <string name="menu_copy_network">Copy Network BSSID</string>
    <string name="tts_no_gps_fix">no GPS fix</string>
    <string name="tts_new_wifi">New WiFi</string>
    <string name="tts_new_cell">New cell</string>
    <string name="tts_queue">Queue</string>
    <string name="tts_from">from</string>
    <string name="tts_o_clock">owe clock</string>
    <string name="speech_wifi_restart">WiFi restarts</string>
    <string name="site_stats_app_name">WiGLE.net Statistics</string>
    <string name="user_stats_app_name">User Statistics</string>
    <string name="tab_rank">Rankings</string>
    <string name="tab_uploads">Uploads</string>
    <string name="tab_news">News</string>
    <string name="filter_show_bt">Show Bluetooth</string>
    <string name="filter_show_btle">Show Bluetooth LE</string>
    <string name="speech_new_bt">New bluetooth to DB</string>
    <string name="filter_show_wifi">Show WiFi</string>
    <string name="filter_show_bt_classic">Show Bluetooth Classic</string>
</resources>