<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group>
        <item
            android:id="@+id/nav_list"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/tab_list"
            />
        <item
            android:id="@+id/nav_map"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/tab_map"
            />
        <item
            android:id="@+id/nav_dash"
            android:icon="@android:drawable/ic_menu_directions"
            android:title="@string/tab_dash"
            />
        <item
            android:id="@+id/nav_data"
            android:icon="@android:drawable/ic_menu_save"
            android:title="@string/tab_data"
            />
        <item
            android:id="@+id/nav_search"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/tab_search"
            />
        <item
            android:id="@+id/nav_news"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/tab_news"
            />
        <item
            android:id="@+id/nav_stats"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/tab_stats"/>
        <group
            android:id="@+id/stats_group">
            <item
                android:id="@+id/nav_user_stats"
                android:icon="@android:drawable/ic_menu_myplaces"
                android:title="@string/user_stats_app_name"
                />
            <item
                android:id="@+id/nav_rank"
                android:icon="@android:drawable/ic_menu_sort_alphabetically"
                android:title="@string/tab_rank"
                />
            <item
                android:id="@+id/nav_site_stats"
                android:icon="@drawable/wiglewifi_planet_ico"
                android:title="@string/site_stats_app_name"
                />
        </group>
        <item
            android:id="@+id/nav_uploads"
            android:icon="@android:drawable/ic_menu_upload"
            android:title="@string/tab_uploads"
            />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/menu_settings"
            />
    </group>
    <item
        android:clipToPadding="false"
        android:id="@+id/nav_exit"
        app:showAsAction="always|withText"
        android:title="@null"
        android:icon="@null"
        app:actionLayout="@layout/wigle_exit_item"
        />
</menu>
