<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="10dp"
	android:minWidth="280dip">
	<com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/filter_show_ssid">
		<com.google.android.material.textfield.TextInputEditText
		android:id="@+id/edit_regex"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:inputType="textFilter"
		/>
	</com.google.android.material.textfield.TextInputLayout>

	<CheckBox android:id="@+id/showinvert"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_not_regex" />
    <CheckBox
        android:id="@+id/showwifi"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_show_wifi"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="0dp">
        <CheckBox
            android:id="@+id/showopen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_show_open"/>

        <CheckBox
            android:id="@+id/showwep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_show_wep" />

        <CheckBox
            android:id="@+id/showwpa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_show_wpa" />
    </LinearLayout>
    <CheckBox
        android:id="@+id/showcell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_show_cell" />
    <CheckBox
        android:id="@+id/showbt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_show_bt" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="0dp">
        <CheckBox
            android:id="@+id/showbtc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_show_bt_classic" />
        <CheckBox
            android:id="@+id/showbtle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_show_btle" />
    </LinearLayout>
    <CheckBox
        android:id="@+id/enabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_enabled" />

	<LinearLayout
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              >
		<Button android:id="@+id/cancel_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/cryptocanceldialog_button"
			android:layout_weight="1"
			style="?android:attr/buttonBarButtonStyle" />
		<Button android:id="@+id/ok_button"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/cryptodialog_button"
              android:layout_weight="1"
			style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>