<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimary">
    <RelativeLayout
        android:id="@+id/speech_content_wrapper"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/child_activity_background"
        android:orientation="vertical"
        android:paddingVertical="4dp">
        <LinearLayout
            android:id="@+id/speech_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:paddingTop="4dp"
            android:paddingHorizontal="14dp"
            android:paddingBottom="8dp">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/speech_name"
                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
        </LinearLayout>
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/speech_settings"
            android:layout_above="@id/speech_settings_ok"
            android:paddingHorizontal="14dp"
            android:background="@color/child_activity_background">
            <LinearLayout
                android:id="@+id/linearlayout"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dip"
                    android:layout_marginBottom="6dip"
                >
                    <Spinner android:id="@+id/speak_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawSelectorOnTop="true"
                        android:layout_weight="0"
                        android:minHeight="48dp"
                        android:prompt="@string/speak_text"
                    />
                    <TextView
                        android:id="@+id/speak_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/speak_text"
                        android:layout_weight="1"
                    />
                </LinearLayout>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/speech_text" />
                <CheckBox
                    android:id="@+id/speech_gps"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/speech_gps"
                    android:minHeight="48dp"/>
                <!-- run, new, queue, miles, time, battery -->
                <CheckBox
                    android:id="@+id/speech_run"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/speech_run"
                    android:minHeight="48dp"/>
                <CheckBox
                    android:id="@+id/speech_new_wifi"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/speech_new_wifi"
                    android:minHeight="48dp"/>
                <CheckBox
                    android:id="@+id/speech_new_cell"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/speech_new_cell"
                    android:minHeight="48dp"/>
                <CheckBox
                    android:id="@+id/speech_new_bt"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/speech_new_bt"
                    android:minHeight="48dp"/>
                <CheckBox
                    android:id="@+id/speech_queue"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/speech_queue"
                    android:minHeight="48dp"/>
                <CheckBox
                    android:id="@+id/speech_miles"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/speech_miles"
                    android:minHeight="48dp"/>
                <CheckBox
                    android:id="@+id/speech_time"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/speech_time"
                    android:minHeight="48dp"/>
                <CheckBox android:id="@+id/speech_battery"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/speech_battery"
                    android:minHeight="48dp"/>
                <CheckBox
                    android:id="@+id/speech_wifi_restart"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/speech_wifi_restart"
                    android:minHeight="48dp"/>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="2dip"
                    android:background="#A07070"
                    android:orientation="horizontal"
                />
                <CheckBox android:id="@+id/speech_ssid"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/speech_ssid"
                    android:minHeight="48dp"/>
            </LinearLayout>
        </ScrollView>
        <LinearLayout
            android:id="@+id/speech_settings_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:paddingBottom="16dp"
            android:paddingHorizontal="14dp"
            android:background="@color/child_activity_background">
            <Button
                android:id="@+id/finish_speech_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listdialog_button"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="6dp"
                />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>