<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:padding="10dp"
              android:minWidth="280dip"              
              >
              
    <LinearLayout
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              >
		<TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/crypto_security"
              />
    	<TextView android:id="@+id/security"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:textStyle="bold"              
              />
    </LinearLayout>
    
    <LinearLayout
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              >
		<TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/crypto_strength"
              />
    	<TextView android:id="@+id/signal"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:textStyle="bold"              
              />
    </LinearLayout>
              
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/crypto_password">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox android:id="@+id/showpass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/crypto_show_password" /> 
	
	<LinearLayout
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              >
  
  <Button android:id="@+id/cancel_button"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/cryptocanceldialog_button"
              android:layout_weight="1"
              />       
    		  
	<Button android:id="@+id/ok_button"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/cryptodialog_button"
              android:layout_weight="1"
              android:enabled="false"
              /> 
   </LinearLayout>     
</LinearLayout>